...
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/miles_taken"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/step_taken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/steps_taken"
        android:textSize="32sp" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/steps_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text=""
            android:textSize="32sp" />

...
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="To go today"
        android:textSize="32sp" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="left"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/set_goal"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:onClick="set_goal"
            android:text="set goal"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/view_Goal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
    <LinearLayout
        android:layout_width="283dp"
        android:layout_height="93dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add500Button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/add_500_steps" />

        <Button
...
